--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.application.name=naming-server
+server.port=8761
+# Do not register with itself
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
